更新bug，增加功能。[1.0.1908.1551]

--- a/DeskRedis/DeskRedis.csproj
+++ b/DeskRedis/DeskRedis.csproj
@@ -111,6 +111,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Enums\ConfigOperationType.cs" />
     <Compile Include="Enums\MenuItemType.cs" />
     <Compile Include="Exceptions\DuplicateMemberException.cs" />
     <Compile Include="Exceptions\IllegalFormDataException.cs" />
