--- a/DeskRedis/DeskRedis.csproj
+++ b/DeskRedis/DeskRedis.csproj
@@ -111,6 +111,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Control\CustomControl\ImageButton.cs" />
+    <Compile Include="Control\CustomControl\PathButton.cs" />
     <Compile Include="Enums\ConfigOperationType.cs" />
     <Compile Include="Enums\MenuItemType.cs" />
     <Compile Include="Exceptions\DuplicateMemberException.cs" />
@@ -135,11 +137,47 @@
     <Compile Include="WinSearchKey.xaml.cs">
       <DependentUpon>WinSearchKey.xaml</DependentUpon>
     </Compile>
+    <Page Include="Style\BaseControlStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Style\BaseStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Style\Font.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Style\Size.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Style\TextBoxStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Style\Color.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Control\Style\ImageButtonStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Control\Style\PathButtonStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Style\PathData.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Style\ScrollStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\Generic.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -207,6 +245,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="redis.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Control\UserControl\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\redis.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
