合并更新。[update by y430p]

--- a/.gitignore
+++ b/.gitignore
@@ -180,6 +180,8 @@ PublishScripts/
 # NuGet Packages
 *.nupkg
 # The packages folder can be ignored because of Package Restore
+packages
+packages/
 **/[Pp]ackages/*
 # except build/, which is used as an MSBuild target.
 !**/[Pp]ackages/build/
